fix database schemes and test

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,9 +1,2 @@
-driver = org.h2.Driver
-jdbcurl = jdbc:h2:mem:activerecord
-schema = "net.numa08.f_scala.models.Tables"
-
-tess {
-    driver = org.h2.Driver
-    jdbcurl = jdbc:h2:mem:activerecord:test
-    schema = "net.numa08.f_scala.models.Tables"
-}
+driver = "org.h2.Driver"
+jdbcurl = "jdbc:h2:mem:activerecord"
